# constellation

./: .env.example  .gitignore  ARCHITECTURE.md  ATLAS_LLM_INVESTIGATION.md  BACKLOG.md  HANDOFF.md  Makefile  README.md  _build_backend.py  architecture_diagrams.md  claim_schema.json  epsilon_machine_schema.json  idea_schema.json  paper_schema.json  pyproject.toml  sheaf_schema.json
.github/workflows/: ci.yml
corpora/atlas/: DEMO_SCRIPT.md
corpora/atlas/v05/: constellation.html  constellation_v05_ideas.html  evidence_comparability.json  final_state.json  ideas_summary.json  operations.json  prediction_edges.json  report.md  results.md  (+1 more)
corpora/atlas_prior/: comparability.json
prototype/: cost_flip.py  discover_ideas.py  situate_diagnose.py
schemas/: claim.schema.json  edge.schema.json  evidence.schema.json  idea.schema.json  sheaf.schema.json
scripts/: compare_runs.py
src/constellation/: __init__.py  cli.py  comparability.py  config.py  epsilon_machine.py  extract.py  failures.py  idea_partition.py  llm.py  llm_cache.py  objects.py  paper_loader.py  paths.py  pdf_text.py  pipeline.py  prompt_loader.py  report.py  schemas.py  scoring.py  seeds.py  sheaf.py  stature.py  subjects.py  util.py  viz.py
tests/: test_config.py  test_epsilon_machine.py  test_failures.py  test_llm_cache.py  test_pipeline.py  test_scoring.py  test_smoke.py  test_stage1_helpers.py  test_stage2_helpers.py  test_stage3_helpers.py  test_stage4_helpers.py  test_stage5_helpers.py  test_stage6_helpers.py  test_stage7_helpers.py  test_stage8_helpers.py  test_stage9_helpers.py  test_viz.py
(+204 files in other folders)
