[project]
name = "constellation"
version = "0.1.0"
description = "Landscape Map v2 — sheaf-based literature consolidation pipeline"
requires-python = ">=3.13"
dependencies = [
  "anthropic>=0.97",
  "pydantic>=2.13",
  "jsonschema>=4.26",
  "python-dotenv>=1.2",
  "typer>=0.24",
  "rich>=15.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0", "ruff>=0.15"]

[project.scripts]
constellation = "constellation.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/constellation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
