[project]
name = "constellation"
version = "0.1.0"
description = "Restriction-rewriting literature synthesis over claim/evidence sheaves"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
constellation = "constellation.cli:main"

[build-system]
requires = []
build-backend = "_build_backend"
backend-path = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
